# realtime_board

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTINUITY.md  Cargo.toml  Dockerfile.backend  Dockerfile.postgres  Readme.md  docker-compose.logging.yml  docker-compose.yml  schema.md  system_prototype.md  test_output.txt  verify_password_toggle.py
.Jules/: palette.md
.agent/: execplan-fr-brd-02-edit-board.md  execplan-fr-brd-03-delete-board.md  execplan-fr-brd-06-access-control.md  execplan-fr-cmt-01-add-comment.md  execplan-fr-elm-01-add-element.md  execplan-fr-elm-02-edit-element.md  execplan-fr-elm-03-delete-element.md  execplan-fr-elm-04-move-element.md  execplan-logging-phase-4-frontend.md  execplan-logging-phase-7-otel.md  execplan-refactor-org-members.md
.agent/execplans/: FR-BOARD-CANVAS-REFACTOR.md  FR-BOARD-ROUTE-REFACTOR.md  FR-DASH-RECENT-STARRED.md  FR-DIAG-ORTHO-ROUTING.md  FR-PIXIJS-MIGRATION.md  (+5 more)
.jules/: bolt.md  palette.md  sentinel.md
.sqlx/: query-023ee46a3bd0f1b7d75958ef2d2e8874cc85f4853773e6ffcd2e80d37f1b9612.json  query-218a4004d783c26d920f36f5593b32ac0b94e88529a0a3bee9b5ec6da32abec3.json  query-2bb9da99829ee4abc186a0bc3417013c4a7f8293a0e0ee50dc4305245ec31693.json  query-2df2f0c48017736e840e5040acbb0f0d348d4469df17b31b37bc63105fa77f84.json  query-30cb51cf495b1aeeeb96300a6f1fdf6dd0d5bd6c5e8d8b23a224a272f80f6ee2.json  query-380383a5f00d08aae6e5e3b2e4051de76b59086646d208ddbd08132efe4873b6.json  query-426db0993dc0c587e00cf4346a37d7162e7b5dee5b4ca2ec2c126890ace5347c.json  query-5156e33f4779fab40e599a03d989ed91d04948c47fbec03da9a78c4c78cab7f4.json  query-60f50965c2b2cb068615a1c78e1677df9a827a631626e0ea35d52ad05153973c.json  query-68fc9df566c29220be5981b626a3502e535d95486074e3c59b6c3a7fa6f654b8.json  query-69c77fc40283efd116567746df170c5d1bc597f30603f3493772888a61cb7dbf.json  query-9928faa155d2fb3750a9c57087aa4855002729e551ac020e278263874e8bb2d1.json  query-a0dc00f892f533d4c639e844cf6580c88cc00a1fd0dddd8bdf4954351cf67469.json  query-bfbd9dcad8edb2a87762114dc85868bbb26b44d926415988b1c8e9da3614f598.json  query-cef676932f9d75bcca589f8b9406f2b4c9cae341969bc33fc86fae8317ebd9ce.json  query-d2cf10f6a584ec2096da39b71e0e877c52b973ccb770e1172289c099e4fff1ff.json  query-f0c12b0d3eddbe4966c54fe86e3e76b676a4e3955128fc0a85950816b56bd6cb.json
docs/: CHANGELOG.md  README.md
frontend/: AGENTS.md  CLAUDE.md  GEMINI.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
logging/: alerting-rules.yml  alloy-config.alloy  loki-config.yaml  tempo-config.yml
migrations/: 20260128142400_add_invite_token_hash.sql
src/: main.rs
(+210 files in other folders)
