[package]
name = "Real-time_Board"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
argon2 = { version = "0.5.3", features = ["std"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "json",
    "chrono",
] }
dotenvy = "0.15.7"
lettre = { version = "0.11.19", default-features = false, features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport", "pool"] }
urlencoding = "2.1.3"

tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }

tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["v7", "serde", "fast-rng", "v4"] }
futures = "0.3.31"
serde_urlencoded = "0.7.1"
yrs = { version = "0.25.0", features = ["sync"] }
dashmap = "6.1.0"
